--- a/file/shopping-style.css
+++ b/file/shopping-style.css
@@ -25,3 +25,20 @@ img{float:left;width:150px;}
     font-size:16px;margin-right:50px;
 }
 #empty{font-size:30px;text-align: center;clear:both;margin-top: 100px;height:400px;}
+#page{clear:both;text-align:center;color:#00BFFF;position:absolute;bottom:30px;width:1200px;}
+#page ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+#page ul li {
+    display:inline;
+    border:solid;
+    padding:10px 15px;
+}
+#page ul li:hover{
+    color:white;
+    background-color:#00BFFF;
+    cursor:pointer;
+    border-color:#00BFFF;
+}
