--- a/file/index-style.css
+++ b/file/index-style.css
@@ -18,7 +18,7 @@ section header nav a:hover{background-color:white;color:black;cursor: pointer;}
 #img1{z-index:-10;position:absolute;top:0;left:0;width:100%;height:100%;transition: all 5s ease;}
 #img2{z-index:-15;position:absolute;top:0;left:100%;width:100%;height:100%;transition: all 5s ease;}
 div div{float:left;padding:1em;}
-div div h3{}
+div div h4{font-weight:normal;font-style: italic;}
 div div{width:350px;margin:25px}
 div div p{padding:10px;}
 div div img{width:150px;height:150px;border-radius: 50%;}
