--- a/file/information-style.css
+++ b/file/information-style.css
@@ -31,3 +31,4 @@ section img{float:left;width:150px;}
 .title{font-size:25px;font-family:Comic Sans MS,cursive;}
 .author{font-size:20px;font-style:italic;font-family:Comic Sans MS,cursive;}
 .upload-price{font-size:20px;}
+#pay:hover{cursor:pointer;}
